--- a/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
+++ b/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="GpM-uE-xCF">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -131,14 +132,15 @@
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Lz-AT-41r">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQr-tl-fvV">
-                                        <rect key="frame" x="36" y="12" width="131" height="60"/>
+                                        <rect key="frame" x="25" y="8" width="131" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="131" id="PFX-Yq-uI2"/>
-                                            <constraint firstAttribute="height" constant="60" id="bs7-1a-p3p"/>
+                                            <constraint firstAttribute="height" constant="50" id="bs7-1a-p3p"/>
                                         </constraints>
+                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="2"/>
                                         <state key="normal" title="Sign Up" image="ic_launcher.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -148,20 +150,20 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="Mt9-Wl-oPB">
-                                        <rect key="frame" x="11" y="20" width="32" height="44"/>
+                                        <rect key="frame" x="3" y="20" width="30" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="32" id="Hg7-k6-V60"/>
-                                            <constraint firstAttribute="height" constant="44" id="qzR-0q-80X"/>
+                                            <constraint firstAttribute="width" constant="30" id="Hg7-k6-V60"/>
+                                            <constraint firstAttribute="height" constant="26" id="qzR-0q-80X"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.94901960780000005" green="0.39607843139999999" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="aQr-tl-fvV" firstAttribute="leading" secondItem="8Lz-AT-41r" secondAttribute="leading" constant="36" id="5PK-CD-T8G"/>
+                                    <constraint firstItem="aQr-tl-fvV" firstAttribute="leading" secondItem="8Lz-AT-41r" secondAttribute="leading" constant="25" id="5PK-CD-T8G"/>
                                     <constraint firstAttribute="centerY" secondItem="aQr-tl-fvV" secondAttribute="centerY" id="JKe-Hs-ICp"/>
-                                    <constraint firstAttribute="centerY" secondItem="Mt9-Wl-oPB" secondAttribute="centerY" constant="-0.5" id="QjN-cr-kwm"/>
-                                    <constraint firstAttribute="height" constant="83" id="lkJ-1B-yzr"/>
-                                    <constraint firstItem="Mt9-Wl-oPB" firstAttribute="leading" secondItem="8Lz-AT-41r" secondAttribute="leading" constant="11" id="orV-Oc-iH9"/>
+                                    <constraint firstAttribute="centerY" secondItem="Mt9-Wl-oPB" secondAttribute="centerY" id="QjN-cr-kwm"/>
+                                    <constraint firstAttribute="height" constant="65" id="lkJ-1B-yzr"/>
+                                    <constraint firstItem="Mt9-Wl-oPB" firstAttribute="leading" secondItem="8Lz-AT-41r" secondAttribute="leading" constant="3" id="orV-Oc-iH9"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -209,14 +211,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xEh-4h-1hr">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qnv-5R-7Pz">
-                                        <rect key="frame" x="36" y="12" width="143" height="60"/>
+                                        <rect key="frame" x="25" y="8" width="143" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="60" id="78h-yY-VgP"/>
+                                            <constraint firstAttribute="height" constant="50" id="78h-yY-VgP"/>
                                             <constraint firstAttribute="width" constant="143" id="qcS-hK-pFI"/>
                                         </constraints>
+                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="2"/>
                                         <state key="normal" title="Showroom" image="ic_launcher.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -226,24 +229,24 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="s0U-gb-SPM">
-                                        <rect key="frame" x="11" y="20" width="32" height="44"/>
+                                        <rect key="frame" x="3" y="20" width="30" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="aDi-9N-Qkj"/>
-                                            <constraint firstAttribute="width" constant="32" id="sXS-jk-jnZ"/>
+                                            <constraint firstAttribute="height" constant="26" id="aDi-9N-Qkj"/>
+                                            <constraint firstAttribute="width" constant="30" id="sXS-jk-jnZ"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.94901960780000005" green="0.39607843139999999" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Qnv-5R-7Pz" firstAttribute="leading" secondItem="xEh-4h-1hr" secondAttribute="leading" constant="36" id="AaO-tj-s8q"/>
+                                    <constraint firstItem="Qnv-5R-7Pz" firstAttribute="leading" secondItem="xEh-4h-1hr" secondAttribute="leading" constant="25" id="AaO-tj-s8q"/>
                                     <constraint firstAttribute="centerY" secondItem="Qnv-5R-7Pz" secondAttribute="centerY" id="Yvr-PR-Egr"/>
-                                    <constraint firstAttribute="height" constant="83" id="auW-ts-3Fb"/>
+                                    <constraint firstAttribute="height" constant="65" id="auW-ts-3Fb"/>
                                     <constraint firstAttribute="centerY" secondItem="s0U-gb-SPM" secondAttribute="centerY" constant="-0.5" id="hFL-vg-Fm7"/>
-                                    <constraint firstItem="s0U-gb-SPM" firstAttribute="leading" secondItem="xEh-4h-1hr" secondAttribute="leading" constant="11" id="q8I-ke-zV5"/>
+                                    <constraint firstItem="s0U-gb-SPM" firstAttribute="leading" secondItem="xEh-4h-1hr" secondAttribute="leading" constant="3" id="q8I-ke-zV5"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nCG-zu-Z7A">
-                                <rect key="frame" x="0.0" y="82" width="320" height="486"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </scrollView>
                         </subviews>
@@ -288,7 +291,7 @@
     </scenes>
     <resources>
         <image name="back_white.png" width="32" height="32"/>
-        <image name="ic_launcher.png" width="55" height="55"/>
+        <image name="ic_launcher.png" width="45" height="45"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
