--- a/KTMBaner/KTMBaner/Classes/Libraries/CollapsableTableView/CollapsableTableViewHeaderViewPlain_iOS7.xib
+++ b/KTMBaner/KTMBaner/Classes/Libraries/CollapsableTableView/CollapsableTableViewHeaderViewPlain_iOS7.xib
@@ -15,11 +15,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="23"/>
+            <rect key="frame" x="0.0" y="1" width="320" height="22"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="321" contentMode="left" text="Section" lineBreakMode="wordWrap" numberOfLines="0" minimumFontSize="10" id="204-Xp-liJ">
-                    <rect key="frame" x="31" y="1" width="240" height="21"/>
+                    <rect key="frame" x="31" y="0.0" width="240" height="21"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="13"/>
@@ -29,7 +29,7 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="36" contentMode="left" text="–" lineBreakMode="tailTruncation" minimumFontSize="10" id="PCY-i0-x8X">
-                    <rect key="frame" x="9" y="1" width="14" height="21"/>
+                    <rect key="frame" x="9" y="0.0" width="14" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="13"/>
@@ -39,11 +39,11 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
                 <activityIndicatorView hidden="YES" opaque="NO" tag="37" contentMode="scaleToFill" hidesWhenStopped="YES" style="white" id="3MW-Uz-vTS">
-                    <rect key="frame" x="288.99999972283842" y="2" width="20" height="20"/>
+                    <rect key="frame" x="289" y="1" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="vHQ-xx-aum">
-                    <rect key="frame" x="218" y="2" width="82" height="21"/>
+                    <rect key="frame" x="218" y="1" width="82" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="12"/>
@@ -53,9 +53,10 @@
                     <size key="shadowOffset" width="0.0" height="0.0"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="209" y="250"/>
         </view>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
