--- a/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
+++ b/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
@@ -245,7 +245,7 @@
                                     <constraint firstItem="s0U-gb-SPM" firstAttribute="leading" secondItem="xEh-4h-1hr" secondAttribute="leading" constant="3" id="q8I-ke-zV5"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nCG-zu-Z7A">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nCG-zu-Z7A">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </scrollView>
